--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -9,6 +9,10 @@
     @apply w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500;
 }
 
+textarea.form-input {
+    @apply text-xs;
+}
+
 /* Buttons */
 .btn {
     @apply px-4 py-2 border rounded-md shadow-sm text-sm font-medium focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500;
